rollout-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rollout-demo
  labels:
    istio-injection: enabled
