rollout-demo/intermediate-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: intermediate-service
  namespace: rollout-demo
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  #selector:
   # app: my-app
