rollout-demo/intermediate-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: intermediate-vs
  namespace: rollout-demo
spec:
  hosts:
  - "intermediate-service.rollout-demo.svc.cluster.local"
  http:
  - match:
    route:
    - destination:
        host: backend-service-v2.rollout-demo.svc.cluster.local
      weight: 100
  - route:  # Default route for stable
    - destination:
        host: backend-service-v1.rollout-demo.svc.cluster.local
      weight: 0
